--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,8 @@
-/.idea/vcs.xml
-/hooks/prepare-commit-msg.sample
-/hooks/commit-msg.sample
-/.idea/compiler.xml
-/hooks/pre-rebase.sample
-/hooks/applypatch-msg.sample
-/loadbalancer.iml
-/hooks/pre-applypatch.sample
-/hooks/pre-push.sample
-/hooks/post-update.sample
-/.idea/misc.xml
+/.idea
+/hooks
 /HEAD
 /info/exclude
 /description
-/.idea/$PRODUCT_WORKSPACE_FILE$
-/.idea/uiDesigner.xml
-/hooks/update.sample
-/.idea/encodings.xml
 /config
-/hooks/pre-receive.sample
-/hooks/pre-commit.sample
-/hooks/fsmonitor-watchman.sample
-/.idea/workspace.xml
+/target
+*.iml
